# similarity-graph-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: basic_ci.yml
similarity-graph-generator/: __init__.py  my_module.py
similaritygraphgenerator/: automated_graph_generation.ipynb  dummy_compound_generator.py  new_automated_graph_generation.ipynb  plot_test.ipynb  plots.ipynb  plots_bad_gn.ipynb
similaritygraphgenerator/actualCode/: automated_graph_generation.ipynb  plots.ipynb
similaritygraphgenerator/actualCode/classes/: compound_generator.py  graph.py  scores.py
similaritygraphgenerator/actualCode/data/: compound_data.py
similaritygraphgenerator/classes/: graph.py  matrix.py  plots.py  scores.py
similaritygraphgenerator/data/: color_data.py  compound_data.py  recipes.py
similaritygraphgenerator/experiment_helper/false_edges_run/: false_edges_automated_graph_generation.ipynb  plots_big_equal_false_edges.ipynb  plots_big_random_false_edges.ipynb  plots_big_weak_false_edges.ipynb  plots_big_well_defined_false_edges.ipynb  plots_equal_false_edges.ipynb  plots_random_false_edges.ipynb  plots_small_weak_false_edges.ipynb  plots_small_well_definded_false_edges.ipynb  plots_weak_false_edges.ipynb  plots_well_defined_false_edges.ipynb
similaritygraphgenerator/experiment_helper/matrix_noise_run/: matrix_noise_automated_graph_generation.ipynb  plots_big_equal_matrix_noise.ipynb  plots_big_random_matrix_noise.ipynb  plots_big_weak_matrix_noise.ipynb  plots_big_well_defined_matrix_noise.ipynb  plots_equal_matrix_noise.ipynb  (+5 more)
similaritygraphgenerator/helper/: automated_graph_generation.ipynb  plots_good_gn.ipynb
tests/: test_compound_generator.py  test_graph.py  test_matrix.py  test_my_module.py  test_scores.py
(+2 files in other folders)
